--- a/templates/Segmentation.html
+++ b/templates/Segmentation.html
@@ -40,7 +40,7 @@
 				<div class="col-lg-12 heading">
 					<h3><b>Enter Customer details</b></h3>
 				</div>
-				<form class="form fform" action="http://127.0.0.1:5000/prediction" method="post">
+				<form class="form fform" action="/prediction" method="post">
 
 					<div class="form-group">
 						<input type="number" name="age" placeholder="Enter Customer Age" class="form-control">
