--- a/templates/Segmentation.html
+++ b/templates/Segmentation.html
@@ -61,12 +61,12 @@
 					</div>
 
 					<div class="form-group">
-						<b>Age-Spend Prediction: </b> {{ prediction2_output }}
+						<b>Age-Spend Report: </b> {{ prediction2_output }}
 					</div>
 					
 
 					<div class="form-group">
-						<b>Income-Spend Prediction: </b> {{ prediction1_output}}
+						<b>Income-Spend Report: </b> {{ prediction1_output}}
 					</div>
 
 
