--- a/templates/Segmentation.html
+++ b/templates/Segmentation.html
@@ -47,7 +47,7 @@
 					</div>
 
 					<div class="form-group">
-						<input type="number" name="income" placeholder="Enter Customer Income(k$)" class="form-control">
+						<input type="number" name="income" placeholder="Customer Income(k$)" class="form-control">
 					</div>
 
 					<div class="form-group">
